<resources>
    <string name="app_name">mockproject_chatapp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">MẬT KHẨU</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_title">Awesome Chat</string>
    <!--    Language English-->
    <string name="txt_login_en">"Login"</string>
    <string name="txt_forgot_password_en">"Forgot your password?"</string>
    <string name="txt_no_account_en">"New member?"</string>
    <string name="txt_register_en">"Register now"</string>
    <string name="txt_invalid_password_en">"Password must be more than 6 characters"</string>
    <string name="txt_name_en">"Name"</string>
    <string name="txt_message_en">"Message"</string>
    <string name="txt_search_message_en">"Search message"</string>
    <string name="txt_friends_en">"Friends"</string>
    <string name="txt_profile_en">"Profile"</string>
    <string name="txt_today_en">"Today"</string>
    <string name="txt_yesterday_en">"Yesterday"</string>
    <string name="txt_cancel_en">"Cancel"</string>
    <string name="txt_create_message_en">"Create message"</string>
    <string name="txt_search_friends_en">"Search friends"</string>
    <string name="txt_search_no_result_en">"No result not found"</string>
    <string name="txt_language_en">"Language"</string>
    <string name="txt_notification_en">"Notification"</string>
    <string name="txt_version_en">"Version"</string>
    <string name="txt_logout_en">"Logout"</string>
    <string name="txt_login_failed_en">"Login failed"</string>
    <string name="txt_invalid_username_en">Not a valid username</string>
    <!--    Language Vietnam-->
    <string name="txt_date_vi">Hôm nay</string>
    <string name="txt_before_date_vi">Hôm qua</string>
    <string name="txt_friend_vi">Kết bạn</string>
    <string name="txt_save_vi">Lưu</string>
    <string name="txt_version_hint_vi">1.00</string>
    <string name="txt_vi">Tiếng Việt</string>
    <string name="txt_password_vi">MẬT KHẨU</string>
    <string name="txt_hintEmail_vi">yourname@gmail.com</string>
    <string name="txt_email_vi">EMAIL</string>
    <string name="txt_titleApp_vi">Trải nghiệm Awesome chat</string>
    <string name="txt_login_vi">"Đăng nhập"</string>
    <string name="txt_forgot_password_vi">"Quên mật khẩu?"</string>
    <string name="txt_no_account_vi">"Thành viên mới?"</string>
    <string name="txt_register_vi">"Đăng ký"</string>
    <string name="txt_invalid_password_vi">"Mật khẩu cân dài hơn 6 ký tự"</string>
    <string name="txt_name_vi">"HỌ VÀ TÊN"</string>
    <string name="txt_message_vi">"Tin nhắn"</string>
    <string name="txt_search_message_vi">"Tìm kiếm tin nhắn"</string>
    <string name="txt_friends">"BẠN BÈ"</string>
    <string name="txt_profile_vi">"CÁ NHÂN"</string>
    <string name="txt_today_vi">"Hôm nay"</string>
    <string name="txt_yesterday_vi">"Hôm qua"</string>
    <string name="txt_cancel_vi">"Hủy"</string>
    <string name="txt_create_message_vi">"Tạo tin nhắn mới"</string>
    <string name="txt_search_friends_vi">"Tìm kiếm bạn bè"</string>
    <string name="txt_search_no_result_vi">"Không tìm thấy kết quả phù hợp"</string>
    <string name="txt_language_vi">"Ngôn ngữ"</string>
    <string name="txt_enterMessage_vi">Nhập tin nhắn</string>
    <string name="txt_notification_vi">"Thông báo"</string>
    <string name="txt_version_vi">"Phiên bản ứng dụng"</string>
    <string name="txt_logout_vi">"Đăng xuất"</string>
    <string name="txt_login_failed_vi">"Đăng nhập không thành công"</string>
    <string name="txt_invalid_username_vi">Người dùng không hợp lệ</string>
    <string name="txt_notification_friend_vi">Trở thành bạn bè để có thể gửi tin nhắn cho nhau nhé :3</string>
    <string name="txt_not_allow_permission_vi">Bạn bị ngố hả bạn ơi! Không cấp quyền đọc ảnh thì gửi kiểu gì?</string>
    <string name="txt_notification_logout_vi">Bạn có chắc chắn muốn đăng xuất không?</string>
    <string name="txt_no_vi">Không</string>
    <string name="txt_ok_vi">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_rule_vi">Tôi đồng ý với các chính sách và điều khoản</string>
    <string name="txt_friend_title_vi">Bạn bè</string>
    <string name="txt_language_title_vi">Ngôn ngữ</string>
    <string name="txt_notification_title_vi">Thông báo</string>
    <string name="txt_edit_profile_vi">Chỉnh sửa thông tin</string>
    <string name="txt_phone_vi">SỐ ĐIỆN THOẠI</string>
    <string name="txt_date_of_birth_vi">NGÀY SINH</string>
</resources>