<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModelSearchFriend"
            type="com.rikkei.tranning.chatapp.views.uis.friend.searchfriends.SearchFriendViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg">

        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:focusable="true"
                android:id="@+id/editTextSearchFriend"
                android:layout_width="311dp"
                android:layout_height="40sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="20sp"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:hint="@string/txt_search_friends_vi"
                android:padding="5dp" />

            <TextView
                android:id="@+id/textViewCancelSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/editTextSearchFriend"
                android:text="@string/txt_cancel_vi"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_friend_title_vi"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewSearchFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:src="@drawable/ic_add_new_friend" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/RelativeLayout"
            android:layout_marginTop="50dp"
            android:background="@drawable/fragment">

            <TextView
                android:id="@+id/textViewTitleFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="26dp"
                android:text="@string/txt_friend_title_vi"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSearchFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitleFriend"
                android:layout_marginTop="26dp" />

            <ImageView
                android:id="@+id/imageViewNoResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recyclerSearchFriend"
                android:layout_marginTop="113dp"
                android:src="@drawable/ic_search_noresult" />

            <TextView
                android:id="@+id/textViewNoResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewNoResult"
                android:layout_marginTop="26dp"
                android:gravity="center"
                android:text="@string/txt_search_no_result_vi"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>
</layout>