<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.uis.SignUp">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarregister"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="24sp"
        android:layout_width="20dp"
        android:layout_height="24dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarregister"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:textStyle="bold"
                android:id="@+id/textViewRegister"
                android:layout_marginLeft="25dp"
                android:text="@string/txt_register_vi"
                android:textColor="#4356B4"
                android:textSize="32sp"
                android:layout_marginTop="30dp"
                android:layout_width="118dp"
                android:layout_height="40dp"
                />
            <RelativeLayout
                android:id="@+id/RelativeLayoutName"
                android:layout_below="@+id/textViewRegister"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:text="@string/txt_name_vi"
                    android:gravity="top"
                    android:id="@+id/textViewName"
                    android:layout_width="73dp"
                    android:layout_height="17dp"
                    />
                <EditText
                    android:textColorHint="#000000"
                    android:id="@+id/editTextNameRegister"
                    android:layout_marginTop="24dp"
                    android:hint="Awesome Chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <ImageView
                    android:layout_marginTop="24dp"
                    android:fillColor="#4356B4"
                    android:scaleType="fitXY"
                    android:src="@drawable/user"
                    android:layout_alignParentRight="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/RelativeEmail"
                android:layout_below="@+id/RelativeLayoutName"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:text="@string/prompt_email"
                    android:gravity="top"
                    android:layout_width="42dp"
                    android:layout_height="17dp"
                    />
                <EditText
                    android:textColorHint="#000000"
                    android:inputType="textEmailAddress"
                    android:id="@+id/editTextEmailRegister"
                    android:layout_marginTop="24dp"
                    android:hint="yourname@gmail.com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <ImageView
                    android:layout_marginTop="24dp"
                    android:fillColor="#4356B4"
                    android:scaleType="fitXY"
                    android:src="@drawable/email"
                    android:layout_alignParentRight="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/RelativePass"
                android:layout_below="@+id/RelativeEmail"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:text="@string/prompt_password"
                    android:gravity="top"
                    android:id="@+id/textViewPass"
                    android:layout_width="73dp"
                    android:layout_height="17dp"
                    />
                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/editTextPassRegister"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <ImageView
                    android:layout_marginTop="24dp"
                    android:fillColor="#4356B4"
                    android:scaleType="fitXY"
                    android:src="@drawable/key"
                    android:layout_alignParentRight="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    />
            </RelativeLayout>
            <CheckBox
                android:checked="false"
                android:button="@drawable/checkbox_custom"
                android:textSize="14sp"
                android:textColor="#393939"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/RelativePass"
                android:text="@string/txt_rule_vi"
                android:id="@+id/checkboxRegister"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                />
            <Button
                android:layout_below="@+id/checkboxRegister"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:text="@string/txt_register_vi"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_button_login"
                android:id="@+id/ButtonRegister"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Button
                android:textColor="#999999"
                android:text="Đã có tài khoản?Đăng nhập ngay"
                android:background="#ffffff"
                android:textAllCaps="false"
                android:id="@+id/ButtonMoveLogin"
                android:gravity="right|top"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/ButtonRegister"
                android:layout_marginLeft="85dp"
                android:layout_width="205dp"
                android:layout_height="17dp"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>